apps/prod/esphome/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: esphome
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
